--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "Interpreter": "file:Interpreter-1.0.0.tgz",
     "body-parser": "~1.18.2",
     "config": "^1.30.0",
     "cookie-parser": "~1.4.3",
